# md2pdf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  md2pdf_run.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: PLAN-features.md
examples/: sample.md
md2pdf/: __init__.py
md2pdf/cli/: interactive.py  main.py
md2pdf/cli/commands/: batch.py  convert.py  watch.py
md2pdf/config/: __init__.py  env.py  file_config.py  frontmatter.py  schema.py
md2pdf/core/: __init__.py  image_resolver.py  include_resolver.py  parser.py  pdf_engine.py  renderer.py  title_page.py  toc.py  toc_detect.py
md2pdf/themes/: __init__.py  loader.py  schema.py
md2pdf/themes/builtin/: academic.yaml  corporate.yaml  dark.yaml  default.yaml  github.yaml  liberation.yaml  minimal.yaml
md2pdf/utils/: __init__.py  console.py  exit_codes.py  fs.py
templates/: base.html
tests/: test_include_resolver.py  test_parser.py  test_theme_loader.py
tests/fixtures/: partial.md  simple.md  with_includes.md
